# android-auto-client-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
protos/: android.auto.proto  android_auto.proto
src/: aap.rs  android_open_accessory.rs  main.rs  window.rs
src/aap/: head_unit.rs
src/protos/: android.auto.proto
