[package]
name = "aahu"
version = "0.1.0"
authors = ["Joel Winarske <joel.winarske@linux.com>"]
keywords = ["androidauto", "headunit"]
edition="2018"
description = "Headunit Component for Android Auto"
license = "MIT"
homepage = "https://github.com/jwinarske/aahu-rs"
repository = "https://github.com/jwinarske/aahu-rs"
readme = "README.md"

[dependencies]
log = "0.4"
signal-hook = "0.1"
pretty_env_logger = "0.4.0"
byteorder = "1.3.1"
usbapi = "0.2.1"
tokio-udev = "0.3.0"
futures-util = "0.3.8"
tokio = { version = "0.3.6", features = ["macros", "rt-multi-thread"] }
protobuf = "2.18.1"
tls-api = "0.4.0"

[build-dependencies]
protobuf-codegen-pure = "2.18.1"
