[package]
name = "aahu"
version = "0.1.0"
authors = ["Joel Winarske <joel.winarske@linux.com>"]
keywords = ["androidauto", "headunit"]
edition = "2018"
description = "Headunit Component for Android Auto"
license = "MIT"
homepage = "https://github.com/jwinarske/aahu-rs"
repository = "https://github.com/jwinarske/aahu-rs"
readme = "README.md"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
usbapi = "0.2.1"
tokio-udev = "0.6.0"
futures-util = "0.3.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.6"
gstreamer = "0.16.5"

[build-dependencies]
prost-build = "0.6.1"
